@@ -1,3 +1,39 @@
 .u-hidden {
-    display: none;
+    display: none !important;
+}
+
+.u-hidden\@medium {
+    @include medium {
+        display: none !important;
+    }
+}
+
+.u-hidden\@small {
+    @include small {
+        display: none !important;
+    }
+}
+
+.u-inline\@medium {
+    @include medium {
+        display: inline !important;
+    }
+}
+
+.u-inline\@small {
+    @include small {
+        display: inline !important;
+    }
+}
+
+.u-block\@medium {
+    @include medium {
+        display: block !important;
+    }
+}
+
+.u-block\@small {
+    @include small {
+        display: block !important;
+    }
 }
